adding trigram frequencies/tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-/target
-/lib
-/classes
-/checkouts
 pom.xml
-*.jar
-*.class
+*jar
+/lib/
+/out/
+/repl/
+/classes/
+/target/
 .lein-deps-sum
-.lein-failures
-.lein-plugins
+*swp
+*swo
+*.DS_Store
+/resources/public/cljs/*
+nohup.out
+.lein*
